# Real_Estate_Scraping

./: .aider.chat.history.md  .aider.input.history  .coverage  .gitignore  Makefile  README.md  pyproject.toml  report_config.json  requirements.txt
.aider.tags.cache.v4/: cache.db
.github/workflows/: ci.yml
Let's craft the code.src/: scraper.py
Thus final answer: provide the SEARCH/REPLACE block for `src/cli.py`.src/: cli.py
real_estate_scraping/: scrapers.py
real_estate_scraping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  app.py  cli.py  scraper.py
tests/: test_cli.py  test_scraper.py
